# dazzle-preservelib

./: .repokit.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/: release-template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
dazzle_preservelib/: __init__.py  __main__.py  _version.py  links.py  manifest.py  metadata.py  operations.py  restore.py
dazzle_preservelib/dazzlelink/: __init__.py  core.py
dazzle_preservelib/linkmirror/: __init__.py  mft.py  plan.py  records.py  scan.py  verify.py
docs/: api-stability.md  platform-support.md
tests/: conftest.py  test_consumer_import_surface.py  test_cycle_detection.py  test_dazzlelink_bridge.py  test_import_stability.py  test_linkmirror_engine.py  test_linkmirror_mft.py  test_links_delegation.py  test_manifest_lifecycle.py  test_space_check.py  test_version.py
tests/checklists/: v0.8.1__Epic__dazzle-preservelib-L3-extraction.md  v0.9.0__Feature__linkmirror-engine-scan-plan-apply-verify.md
tests/checklists/results/: v0.9.0__Feature__linkmirror-engine-scan-plan-apply-verify__results__2026-07-21.md
tests/one-offs/: preflight_clean_venv.py  test_manifest_discovery.py  test_rel_fallback_direct.py  validate_against_preserve_cli.py
