[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dazzle-preservelib"
dynamic = ["version"]
description = "Manifest + operations library -- the DazzleLib stack's L3 orchestration layer (PreserveManifest, transactional copy/move/restore/verify, link policy)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "djdarcy", email = "djdarcy@users.noreply.github.com"},
]
keywords = ["dazzlelib", "preserve", "manifest", "backup", "file-operations", "verification", "links", "stack"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Filesystems",
]

# L3 delegates DOWN: dazzle-lib (B, contracts: Serializable/DazzleDataMixin/
# PreserveError), dazzle-filekit (L1, the OS mechanics -- links/metadata/hashing/
# disk-space). unctools (L0) joins when UNC-identity delegation lands.
dependencies = [
    "dazzle-lib>=0.1.0",
    "dazzle-filekit>=0.3.2",
]

[project.optional-dependencies]
# The .dazzlelink manifest bridge requires the L2 record library; absent it,
# the bridge raises a clear named error (never silent) -- STACK-MAP D2.
dazzlelink = [
    "dazzle-linklib>=0.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/DazzleLib/dazzle-preservelib"
Repository = "https://github.com/DazzleLib/dazzle-preservelib"
Issues = "https://github.com/DazzleLib/dazzle-preservelib/issues"

# Library-only: no console_scripts. The `preserve` CLI lives in the
# DazzleTools/preserve tool, which consumes this library (STACK-MAP P3).

[tool.setuptools.dynamic]
version = {attr = "dazzle_preservelib._version.PIP_VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["dazzle_preservelib", "dazzle_preservelib.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.repokit-common]
version-source = "dazzle_preservelib/_version.py"
changelog = "CHANGELOG.md"
repo-url = "https://github.com/DazzleLib/dazzle-preservelib"
tag-prefix = "v"
private-patterns = ["private/", "local/", ".env"]
